<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.2.2</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>

  <groupId>org.molgenis</groupId>
  <artifactId>vip-inheritance-matcher</artifactId>
  <version>3.1.1</version>

  <name>vip-inheritance-matcher</name>
  <description>Annotates VCF samples with mendelian violation and possible compound flags and
    matching inheritance modes
  </description>

  <scm>
    <connection>scm:git:git://github.com/molgenis/vip-inheritance-matcher.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/molgenis/vip-inheritance-matcher.git
    </developerConnection>
    <url>https://github.com/molgenis/vip-inheritance-matcher</url>
  </scm>

  <licenses>
    <license>
      <distribution>repo</distribution>
      <name>The GNU Lesser General Public License, Version 3.0</name>
      <url>http://www.gnu.org/licenses/lgpl-3.0.txt</url>
    </license>
  </licenses>

  <modelVersion>4.0.0</modelVersion>

  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/molgenis/vip-inheritance-matcher/issues</url>
  </issueManagement>

  <properties>
    <java.version>17</java.version>
    <commons.cli.version>1.6.0</commons.cli.version>
    <!-- [WARNING] Plugin validation issues were detected, see https://github.com/jacoco/jacoco/issues/1435 -->
    <jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
    <samtools.htsjdk.version>4.1.0</samtools.htsjdk.version>
    <vip.utils.version>2.0.0</vip.utils.version>
  </properties>

  <profiles>
    <profile>
      <build>
        <plugins>
          <plugin>
            <artifactId>jacoco-maven-plugin</artifactId>
            <executions>
              <execution>
                <goals>
                  <goal>prepare-agent</goal>
                </goals>
                <id>prepare-agent</id>
              </execution>
              <execution>
                <goals>
                  <goal>report</goal>
                </goals>
                <id>report</id>
              </execution>
            </executions>
            <groupId>org.jacoco</groupId>
            <version>${jacoco-maven-plugin.version}</version>
          </plugin>
        </plugins>
      </build>
      <id>coverage</id>
    </profile>
  </profiles>

  <build>
    <finalName>vcf-inheritance-matcher</finalName>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <compilerArgs>
              <arg>-Xlint</arg>
              <arg>-Xlint:-processing</arg><!-- disable: perfectly normal for annotations to not have a processor -->
            </compilerArgs>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <groupId>org.springframework.boot</groupId>
        <configuration>
          <excludes>
            <!-- By default provided dependencies are included -->
            <exclude>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
            </exclude>
          </excludes>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <groupId>org.apache.maven.plugins</groupId>
      </plugin>
    </plugins>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.molgenis</groupId>
        <artifactId>vip-utils</artifactId>
        <version>${vip.utils.version}</version>
      </dependency>
      <dependency>
        <artifactId>commons-cli</artifactId>
        <groupId>commons-cli</groupId>
        <version>${commons.cli.version}</version>
      </dependency>
      <dependency>
        <artifactId>htsjdk</artifactId>
        <groupId>com.github.samtools</groupId>
        <version>${samtools.htsjdk.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.molgenis</groupId>
      <artifactId>vip-utils</artifactId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <artifactId>commons-cli</artifactId>
      <groupId>commons-cli</groupId>
    </dependency>
    <dependency>
      <artifactId>htsjdk</artifactId>
      <groupId>com.github.samtools</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-test</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
